# backend/src/system/system.controller.ts
@@ -1,6 +1,7 @@
 import { Controller, Get } from "@nestjs/common";
 import { ApiBearerAuth, ApiOkResponse, ApiTags } from "@nestjs/swagger";
 import { Public } from "../auth/decorators/public.decorator";
+import { DockerImagesDto } from "./dto/docker-images.dto";
 import { HostResourcesDto } from "./dto/host-resources.dto";
 import { PublicIpDto } from "./dto/public-ip.dto";
 import { SystemInfoDto } from "./dto/system-info.dto";
@@ -25,6 +26,14 @@ export class SystemController {
   @Get("resources")
   resources(): Promise<HostResourcesDto> {
     return this.system.getResources();
+  }
+
+  // Local image tags, for the IMAGE-source "browse images" picker.
+  @ApiBearerAuth()
+  @ApiOkResponse({ type: DockerImagesDto })
+  @Get("images")
+  async images(): Promise<DockerImagesDto> {
+    return { images: await this.system.getDockerImages() };
   }
 
   @ApiOkResponse({ type: PublicIpDto })
